--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,6 @@ NeliburSimpleApp/bin/Debug/NeliburSimpleApp.exe.config
 NeliburSimpleApp/bin/Debug/NeliburSimpleApp.vshost.exe.config
 NeliburSimpleApp/bin/Debug/NeliburSimpleApp.vshost.exe.config
 NeliburSimpleApp/obj/Debug/NeliburSimpleApp.csproj.FileListAbsolute.txt
+NeliburSimpleApp/bin/Debug/NeliburSimpleApp.exe.config
+NeliburSimpleApp/bin/Debug/NeliburSimpleApp.vshost.exe.config
+NeliburSimpleApp/obj/Debug/NeliburSimpleApp.csproj.FileListAbsolute.txt
