--- a/Contracts/Contracts.csproj
+++ b/Contracts/Contracts.csproj
@@ -40,8 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseRequest.cs" />
+    <Compile Include="CleanMemoryRequest.cs" />
     <Compile Include="GetSummRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReadFromMemoryRequest.cs" />
+    <Compile Include="SaveInMemoryRequest.cs" />
     <Compile Include="SummResponse.cs" />
   </ItemGroup>
   <ItemGroup>
