--- a/Contracts/Contracts.csproj
+++ b/Contracts/Contracts.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddToValueInMemoryRequest.cs" />
     <Compile Include="BaseRequest.cs" />
     <Compile Include="BaseResponse.cs" />
     <Compile Include="CleanMemoryRequest.cs" />
