--- a/NeliburSimpleApp/NeliburSimpleApp.csproj
+++ b/NeliburSimpleApp/NeliburSimpleApp.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Calculator.cs" />
+    <Compile Include="Commands\AddToValueInMemoryCommand.cs" />
     <Compile Include="Commands\CleanMemoryCommand.cs" />
     <Compile Include="Commands\ICommand.cs" />
     <Compile Include="Commands\SaveValueCommand.cs" />
