--- a/Sources/NeliburSimpleApp/App.config
+++ b/Sources/NeliburSimpleApp/App.config
@@ -1,17 +1,36 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <configuration>
-    <system.serviceModel>
-        <services>
-            <service name="Nelibur.ServiceModel.Services.Default.SoapServicePerCall">
-                <endpoint address="net.pipe://localhost/service" binding="netNamedPipeBinding"
-                          contract="Nelibur.ServiceModel.Contracts.ISoapService" />
-
-            </service>
-        </services>
-    </system.serviceModel>
-
-    <startup>
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  
+  <system.serviceModel>
+    <services>
+      <service name="Nelibur.ServiceModel.Services.Default.JsonServicePerCall" behaviorConfiguration="standardBehavior">
+      <endpoint address="" binding="webHttpBinding" contract="Nelibur.ServiceModel.Contracts.IJsonService"
+                   behaviorConfiguration="webHttp" />
+      <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+      <host>
+        <baseAddresses>
+          <add baseAddress="http://localhost:8888" />
+        </baseAddresses>
+      </host>
+      </service>
+    </services>
+    <behaviors>
+      <serviceBehaviors>
+        <behavior name="standardBehavior">
+          <serviceMetadata httpGetEnabled="True" />
+          <serviceDebug includeExceptionDetailInFaults="False" />
+        </behavior>
+        <behavior>
+          <serviceMetadata httpGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="False" />
+        </behavior>
+      </serviceBehaviors>
+      <endpointBehaviors>
+      <behavior name="webHttp">
+        <webHttp />
+      </behavior>
+      </endpointBehaviors>
+    </behaviors>
+    
+  </system.serviceModel>
 </configuration>
