--- a/Sources/NeliburSimpleApp/NeliburSimpleApp.csproj
+++ b/Sources/NeliburSimpleApp/NeliburSimpleApp.csproj
@@ -32,19 +32,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Nelibur, Version=3.0.3.221, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Nelibur.3.1.4\lib\net45\Nelibur.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Nelibur">
+      <HintPath>..\..\packages\Nelibur.3.1.6\lib\net45\Nelibur.dll</HintPath>
     </Reference>
-    <Reference Include="Nelibur.Sword, Version=3.0.3.221, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Nelibur.Sword.3.1.4\lib\net45\Nelibur.Sword.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Nelibur.Sword">
+      <HintPath>..\..\packages\Nelibur.Sword.3.1.6\lib\net45\Nelibur.Sword.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.DirectoryServices.Protocols" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.ServiceModel.Web" />
     <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
